Updated Skills and navbar links

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,208 +1,276 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>Earl Perez - Full Stack Developer</title>
+    <!-- Favicon -->
+    <link href="/assets/img/titlebar-logo.png" rel="icon" type="image/png" />
+    <!-- Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
+      rel="stylesheet"
+    />
+    <!-- Icons -->
+    <link href="/assets/vendor/nucleo/css/nucleo.css" rel="stylesheet" />
+    <link
+      href="/assets/vendor/font-awesome/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <!-- Argon CSS -->
+    <link type="text/css" href="/assets/css/argon.css" rel="stylesheet" />
+    <link type="text/css" href="/assets/css/main.css" rel="stylesheet" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Earl Perez - Full Stack Developer</title>
-  <!-- Favicon -->
-  <link href="/assets/img/titlebar-logo.png" rel="icon" type="image/png">
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-  <!-- Icons -->
-  <link href="/assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
-  <link href="/assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <!-- Argon CSS -->
-  <link type="text/css" href="/assets/css/argon.css" rel="stylesheet">
-  <link type="text/css" href="/assets/css/main.css" rel="stylesheet">
-</head>
-
-<body>
-  <!-- Navbar -->
-  <header class="header-global">
-    <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom">
-      <div class="container">
-        <a class="navbar-brand mr-lg-5" href="../index.html">
-          Earl Perez
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global"
-          aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse collapse" id="navbar_global">
-          <div class="navbar-collapse-header">
-            <div class="row">
-              <div class="col-6 collapse-brand">
-                <a href="../index.html">
-                  Earl Perez
+  <body>
+    <!-- Navbar -->
+    <header class="header-global">
+      <nav
+        id="navbar-main"
+        class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom"
+      >
+        <div class="container">
+          <a class="navbar-brand mr-lg-5" href="../index.html">
+            Earl Perez
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbar_global"
+            aria-controls="navbar_global"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="navbar-collapse collapse" id="navbar_global">
+            <div class="navbar-collapse-header">
+              <div class="row">
+                <div class="col-6 collapse-brand">
+                  <a href="../index.html">
+                    Earl Perez
+                  </a>
+                </div>
+                <div class="col-6 collapse-close">
+                  <button
+                    type="button"
+                    class="navbar-toggler"
+                    data-toggle="collapse"
+                    data-target="#navbar_global"
+                    aria-controls="navbar_global"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+                  >
+                    <span></span>
+                    <span></span>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!-- Navbar Links -->
+            <ul class="navbar-nav align-items-lg-center ml-lg-auto">
+              <li>
+                <a
+                  class="nav-link nav-link-icon"
+                  href="https://github.com/ebcp-dev/"
+                  target="_blank"
+                  data-toggle="tooltip"
+                  data-placement="bottom"
+                  title="Visit my GitHub!"
+                >
+                  <i class="fa fa-github"></i>
+                  <span class="nav-link-inner--text d-lg-none">Github</span>
                 </a>
-              </div>
-              <div class="col-6 collapse-close">
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar_global"
-                  aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
-                  <span></span>
-                  <span></span>
-                </button>
-              </div>
-            </div>
+              </li>
+              <li>
+                <a
+                  class="nav-link nav-link-icon"
+                  href="https://www.linkedin.com/in/earl-perez/"
+                  target="_blank"
+                  data-toggle="tooltip"
+                  data-placement="bottom"
+                  title="View my LinkedIn!"
+                >
+                  <i class="fa fa-linkedin"></i>
+                  <span class="nav-link-inner--text d-lg-none">LinkedIn</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link nav-link-icon"
+                  href="./assets/files/Resume.pdf"
+                  target="_blank"
+                  data-toggle="tooltip"
+                  data-placement="bottom"
+                  title="View my resume!"
+                >
+                  <i class="fa fa-file-text-o"></i>
+                  <span class="nav-link-inner--text d-lg-none">Resume</span>
+                </a>
+              </li>
+            </ul>
+            <!-- Navbar Links -->
           </div>
-          <!-- Navbar Links -->
-          <ul class="navbar-nav align-items-lg-center ml-lg-auto">
-            <li>
-              <a class="nav-link nav-link-icon" href="https://github.com/ebcp-dev/" target="_blank" data-toggle="tooltip"
-                data-placement="bottom" title="View my portfolio!">
-                <i class="fa fa-photo"></i>
-                <span class="nav-link-inner--text d-lg-none">Portfolio</span>
-              </a>
-            </li>
-            <li>
-              <a class="nav-link nav-link-icon" href="https://github.com/ebcp-dev/" target="_blank" data-toggle="tooltip"
-                data-placement="bottom" title="Visit my GitHub!">
-                <i class="fa fa-github"></i>
-                <span class="nav-link-inner--text d-lg-none">Github</span>
-              </a>
-            </li>
-            <li>
-              <a class="nav-link nav-link-icon" href="https://www.linkedin.com/in/earl-perez/" target="_blank"
-                data-toggle="tooltip" data-placement="bottom" title="View my LinkedIn!">
-                <i class="fa fa-linkedin"></i>
-                <span class="nav-link-inner--text d-lg-none">LinkedIn</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link nav-link-icon" href="./assets/files/Resume.pdf" target="_blank" data-toggle="tooltip"
-                data-placement="bottom" title="View my resume!">
-                <i class="fa fa-file-text-o"></i>
-                <span class="nav-link-inner--text d-lg-none">Resume</span>
-              </a>
-            </li>
-          </ul>
-          <!-- Navbar Links -->
         </div>
-      </div>
-    </nav>
-  </header>
-  <!-- Navbar -->
-  <main class="profile-page">
-    <section class="section main-bg">
-      <!-- Projects title card -->
-      <div class="container">
-        <div class="card card-profile shadow mt-5">
-          <div class="px-4">
-            <div class="mt-0 py-2 text-center">
-              <div class="row justify-content-center">
-                <div class="col-lg-9">
-                  <h4><i class="fa fa-photo mr-2"></i>Projects</h4>
-                  <p>All of my projects are hosted on my GitHub.</p>
+      </nav>
+    </header>
+    <!-- Navbar -->
+    <main class="profile-page">
+      <section class="section main-bg">
+        <!-- Projects title card -->
+        <div class="container">
+          <div class="card card-profile shadow mt-5">
+            <div class="px-4">
+              <div class="mt-0 py-2 text-center">
+                <div class="row justify-content-center">
+                  <div class="col-lg-9">
+                    <h4><i class="fa fa-photo mr-2"></i>Projects</h4>
+                    <p>All of my projects are hosted on my GitHub.</p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <!-- Projects title card -->
-      <!-- Resumer card -->
-      <div class="container">
-        <div class="card card-profile shadow mt-5">
-          <div class="px-4">
-            <div class="mt-0 py-5 text-center">
-              <div class="row justify-content-center">
-                <div class="col-lg-9">
-                  <!-- Resumer header -->
-                  <a href="https://resumer.xyz" target="_blank">
-                    <h5>Resumer.xyz</h5>
-                  </a>
-                  <small class="mt-2 text-primary">2018</small><br>
-                  <small class="mt-2">Made with Node.js/Express, React, Redux, PostgreSQL, Mocha, Chai, Travis CI,
-                    Docker,
-                    Kubernetes,
-                    AWS</small>
-                  <!-- Resumer header -->
-                  <!-- Resumer screenshot -->
-                  <a href="https://resumer.xyz" target="_blank"><img src="./assets/img/resumer-screenshot.jpg" alt=""
-                      class="img-fluid"></a>
-                  <!-- Resumer screenshot -->
-                  <p class="mt-4">Resumer is a web app where users can register accounts and organize their job
-                    applications
-                    through
-                    an interactive data table made with <a href="https://www.ag-grid.com/">ag-Grid</a>. The backend is
-                    a REST API written with Express and connected to a
-                    PostgreSQL instance hosted on Amazon RDS. Authentication is handled by Passport.js using JWT. The
-                    API is tested with Mocha and Chai and is integrated
-                    with Travis CI. The frontend is made with React, Redux
-                    and Axios for making HTTP requests to the API. Resumer is deployed on Google Cloud Platform's
-                    Kubernetes Engine using Docker and Kompose.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Resumer card -->
-      <!-- Forum'd card -->
-      <div class="container">
-        <div class="card card-profile shadow mt-5">
-          <div class="px-4">
-            <div class="mt-0 py-5 text-center">
-              <div class="row justify-content-center">
-                <div class="col-lg-9">
-                  <!-- Forum'd header -->
-                  <a href="https://theforumd.herokuapp.com/" target="_blank">
-                    <h5>Forum'd</h5>
-                  </a>
-                  <small class="mt-2 text-primary">2018</small><br>
-                  <small class="mt-2">Made with Node.js/Express, React, MongoDB, Heroku</small>
-                  <!-- Forum'd header -->
-                  <!-- Forum'd screenshot -->
-                  <a href="https://theforumd.herokuapp.com/" target="_blank"><img src="./assets/img/forumd-screenshot.jpg"
-                      alt="" class="img-fluid"></a>
-                  <!-- Forum'd screenshot -->
-                  <p class="mt-4">FORUM'd is an online forum where users can register for accounts, submit either link
-                    posts or text posts, and comment on posts. Node.js/Express is used in the backend REST API. User
-                    and Post data are stored in a MongoDB database hosted on mLab. React and <a href="https://mdbootstrap.com/"
-                      target="_blank">MDBootstrap</a>
-                    are used to create the UI. Passport.js and Bcrypt handle user authentication and password hashing.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Forum'd card -->
-    </section>
-  </main>
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container">
-      <div class="row align-items-center justify-content-md-between">
-        <div class="col-md-6">
-          <div class="copyright">
-            &copy; 2018
-            <a>Earl Perez</a>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <ul class="nav nav-footer justify-content-end">
-            <li class="nav-item">
-              <a href="https://github.com/ebcp-dev/" class="nav-link" target="_blank">GitHub</a>
-            </li>
-            <li class="nav-item">
-              <a href="https://www.linkedin.com/in/earl-perez/" class="nav-link" target="_blank">LinkedIn</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </footer>
-  <!-- Footer -->
-  <!-- Core -->
-  <script src="/assets/vendor/jquery/jquery.min.js"></script>
-  <script src="/assets/vendor/popper/popper.min.js"></script>
-  <script src="/assets/vendor/bootstrap/bootstrap.min.js"></script>
-  <!-- Optional plugins -->
-  <script src="/assets/vendor/headroom/headroom.min.js"></script>
-  <!-- Theme JS -->
-  <script src="/assets/js/argon.js"></script>
-</body>
+        <!-- Projects title card -->
+        <!-- Resumer card -->
+        <div class="container">
+          <div class="card card-profile shadow mt-5">
+            <div class="px-4">
+              <div class="mt-0 py-5 text-center">
+                <div class="row justify-content-center">
+                  <div class="col-lg-9">
+                    <!-- Resumer header -->
+                    <a href="https://resumer.xyz" target="_blank">
+                      <h5>Resumer.xyz</h5>
+                    </a>
+                    <small class="mt-2 text-primary">2019</small><br />
+                    <small class="mt-2"
+                      >Made with Node.js/Express, React, Redux, PostgreSQL,
+                      Mocha, Chai, Travis CI, Docker, Kubernetes, AWS</small
+                    >
+                    <!-- Resumer header -->
+                    <!-- Resumer screenshot -->
+                    <a href="https://resumer.xyz" target="_blank"
+                      ><img
+                        src="./assets/img/resumer-screenshot.jpg"
+                        alt=""
+                        class="img-fluid"
+                    /></a>
 
+                    <!-- Resumer screenshot -->
+                    <p class="mt-4">
+                      Resumer is a web app where users can register accounts and
+                      organize their job applications through an interactive
+                      data table made with
+                      <a href="https://www.ag-grid.com/">ag-Grid</a>. The
+                      backend is a REST API written with Express and connected
+                      to a PostgreSQL instance hosted on Amazon RDS.
+                      Authentication is handled by Passport.js using JWT. The
+                      API is tested with Mocha and Chai and is integrated with
+                      Travis CI. The frontend is made with React, Redux and
+                      Axios for making HTTP requests to the API. Resumer is
+                      deployed on Google Cloud Platform's Kubernetes Engine
+                      using Docker and Kompose.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Resumer card -->
+        <!-- Forum'd card -->
+        <div class="container">
+          <div class="card card-profile shadow mt-5">
+            <div class="px-4">
+              <div class="mt-0 py-5 text-center">
+                <div class="row justify-content-center">
+                  <div class="col-lg-9">
+                    <!-- Forum'd header -->
+                    <a href="https://theforumd.herokuapp.com/" target="_blank">
+                      <h5>Forum'd</h5>
+                    </a>
+                    <small class="mt-2 text-primary">2018</small><br />
+                    <small class="mt-2"
+                      >Made with Node.js/Express, React, MongoDB, Heroku</small
+                    >
+                    <!-- Forum'd header -->
+                    <!-- Forum'd screenshot -->
+                    <a href="https://theforumd.herokuapp.com/" target="_blank"
+                      ><img
+                        src="./assets/img/forumd-screenshot.jpg"
+                        alt=""
+                        class="img-fluid"
+                    /></a>
+
+                    <!-- Forum'd screenshot -->
+                    <p class="mt-4">
+                      FORUM'd is an online forum where users can register for
+                      accounts, submit either link posts or text posts, and
+                      comment on posts. Node.js/Express is used in the backend
+                      REST API. User and Post data are stored in a MongoDB
+                      database hosted on mLab. React and
+                      <a href="https://mdbootstrap.com/" target="_blank"
+                        >MDBootstrap</a
+                      >
+                      are used to create the UI. Passport.js and Bcrypt handle
+                      user authentication and password hashing.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Forum'd card -->
+      </section>
+    </main>
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <div class="row align-items-center justify-content-md-between">
+          <div class="col-md-6">
+            <div class="copyright">
+              &copy; 2018
+              <a>Earl Perez</a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <ul class="nav nav-footer justify-content-end">
+              <li class="nav-item">
+                <a
+                  href="https://github.com/ebcp-dev/"
+                  class="nav-link"
+                  target="_blank"
+                  >GitHub</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  href="https://www.linkedin.com/in/earl-perez/"
+                  class="nav-link"
+                  target="_blank"
+                  >LinkedIn</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer -->
+    <!-- Core -->
+    <script src="/assets/vendor/jquery/jquery.min.js"></script>
+    <script src="/assets/vendor/popper/popper.min.js"></script>
+    <script src="/assets/vendor/bootstrap/bootstrap.min.js"></script>
+    <!-- Optional plugins -->
+    <script src="/assets/vendor/headroom/headroom.min.js"></script>
+    <!-- Theme JS -->
+    <script src="/assets/js/argon.js"></script>
+  </body>
 </html>
